// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> does not show a label if not specified 1`] = `
"<div class=\\"hig__input-button hig__input-button--radio \\">
  <!--RADIOBUTTON_LABEL-->
  <label for=\\"1234\\" class=\\"hig__input-button__label hig--hidden\\"></label>
  <input type=\\"radio\\" class=\\"hig__input-button__input\\" name=\\"agree_toc\\" id=\\"1234\\" value=\\"agree\\">
  <span class=\\"hig__input-button__input-wrapper\\"></span>
</div>"
`;

exports[`<RadioButton> renders the standard  RadioButton 1`] = `
"<div class=\\"hig__input-button hig__input-button--radio \\">
  <!--RADIOBUTTON_LABEL-->
  <label for=\\"1234\\" class=\\"hig__input-button__label\\">I agree</label>
  <input type=\\"radio\\" class=\\"hig__input-button__input\\" name=\\"agree_toc\\" id=\\"1234\\" value=\\"agree\\">
  <span class=\\"hig__input-button__input-wrapper\\"></span>
</div>"
`;
